<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the AddPlantActivity -->
<!-- From here the user can addUser a plant to the app -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/drawer_layout"
    android:theme="@style/AddPlantTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAddButtonGreen"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <!--Plant name, field title and edit text area-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/fieldTitleName"/>
                <EditText
                    android:id="@+id/editTextNewPlantName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:inputType="text"/>
            </LinearLayout>

            <!--Plant minimum humidity, field title and edit text area-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/fieldTitleMinHumidity"/>
                <EditText
                    android:id="@+id/editTextNewPlantMinHumidity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:inputType="text"/>
            </LinearLayout>

            <!--Confirm addUser button, pressing this button adds the plant and closes the activity-->
            <Button
                android:id="@+id/buttonConfirmEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minHeight="0dp"
                android:paddingHorizontal="30dp"
                android:paddingVertical="5dp"
                android:textSize="20sp"
                android:text="@string/buttonEditPlantText"
                android:background="@color/colorAddButtonGreen"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header" />
</android.support.v4.widget.DrawerLayout>
